# llm-temp-introspection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/commands/git/: commit.md
docs/: ADR-001-figure2a-visualization.md  blog_post.md  experiment_a_and_d.md  study_report_study2_focus.md
output/DEVSTRAL/ELEPHANT/CRAZY/: temp_0.0_loop_0.json  temp_0.0_loop_1.json  temp_0.0_loop_2.json  temp_0.1_loop_0.json  temp_0.1_loop_1.json  temp_0.1_loop_2.json  temp_0.2_loop_0.json  temp_0.2_loop_1.json  temp_0.2_loop_2.json  temp_0.3_loop_0.json  temp_0.3_loop_1.json  temp_0.3_loop_2.json  temp_0.4_loop_0.json  temp_0.4_loop_1.json  temp_0.4_loop_2.json  temp_0.5_loop_0.json  temp_0.5_loop_1.json  temp_0.5_loop_2.json  (+15 more)
output/analysis/: study1_glm_comparison.csv  study1_glm_effects.csv  study1_glm_lrt.csv  study1_spearman.csv  study1_spearman_by_prompt.csv  study2_bootstrap_ci.csv  study2_detailed_metrics.csv
output/study2/: summary.csv  summary_gemma_devstral.csv
resources/prompts/: experiment_a_edit.txt  study1.txt  study2_prediction.txt  study2_prediction_blind.txt
src/analysis/: experiment_a_analysis.py  experiment_d_analysis.py  study1_logistic.py  study1_spearman.py  study2_detailed.py
src/core/: llm.py
src/models/: env.py  llm.py  temperature_introspection.py
src/study/: experiment_a.py  experiment_d.py  s1.py  s2.py  sample.py
src/visualization/: blog_effect_size.py  blog_spearman_heatmap.py  blog_study2_delta.py  experiment_a_plot.py  experiment_d_plot.py  study1_heatmap.py  study1_heatmap_report.py  study2_accuracy.py
(+8292 files in other folders)
